<resources>
    <string name="app_name">helloworld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book.
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!-- Login screen strings -->
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to your account</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_prompt">Don\'t have an account? Sign Up</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_failed">Authentication failed</string>
    <string name="welcome">Welcome!</string>
    <string name="forgot_password_clicked">Forgot password clicked</string>
    <string name="sign_up_clicked">Sign up clicked</string>
</resources>